add calculate jobs

--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -7,3 +7,14 @@ jobs:
       - id: set-foo
         run: echo "foo=bar" >> $GITHUB_OUTPUT
       - run: echo ${{ steps.set-foo.outputs.foo }}
+  calculate:
+    runs-on: ubuntu-latest
+    steps:
+      - id: gen-num1
+        run: echo "num=$(($RANDOM % 10 + 1))" >> "$GITHUB_OUTPUT"
+      - id: gen-num2
+        run: echo "num=$(($RANDOM % 10 + 1))" >> "$GITHUB_OUTPUT"
+      - run: echo $((${{ steps.gen-num1.outputs.num }} + ${{ steps.gen-num2.outputs.num }}))
+      - run: echo $((${{ steps.gen-num1.outputs.num }} - ${{ steps.gen-num2.outputs.num }}))
+      - run: echo $((${{ steps.gen-num1.outputs.num }} * ${{ steps.gen-num2.outputs.num }}))
+      - run: echo $((${{ steps.gen-num1.outputs.num }} / ${{ steps.gen-num2.outputs.num }}))
