--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -5,15 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: set-foo
-        run: echo "foo=bar" >> $GITHUB_OUTPUT
+        run: echo "foo=bar"
       - run: echo ${{ steps.set-foo.outputs.foo }}
   calculate:
     runs-on: ubuntu-latest
     steps:
       - id: gen-num1
-        run: echo "num=$(($RANDOM % 10 + 1))" >> "$GITHUB_OUTPUT"
+        run: echo "num=$(($RANDOM % 10 + 1))"
       - id: gen-num2
-        run: echo "num=$(($RANDOM % 10 + 1))" >> "$GITHUB_OUTPUT"
+        run: echo "num=$(($RANDOM % 10 + 1))"
       - run: echo $((${{ steps.gen-num1.outputs.num }} + ${{ steps.gen-num2.outputs.num }}))
       - run: echo $((${{ steps.gen-num1.outputs.num }} - ${{ steps.gen-num2.outputs.num }}))
       - run: echo $((${{ steps.gen-num1.outputs.num }} * ${{ steps.gen-num2.outputs.num }}))
