add notify random

--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -34,3 +34,10 @@ jobs:
         continue-on-error: true
         run: exit 1
       - run: echo "I don't care!"
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+      - id: random
+        run: exit $(($RANDOM % 2 == 0))
+      - if: always()
+        run: echo ${{ steps.random.outcome }}
