--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -41,3 +41,11 @@ jobs:
         run: exit $(($RANDOM % 2 == 0))
       - if: always()
         run: echo ${{ steps.random.outcome }}
+  backup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: original
+        run: exit 1
+      - name: backup
+        if: failure()
+        run: echo backup
